--- a/web3/src/app/shared/components/symbol-header/symbol-header.component.html
+++ b/web3/src/app/shared/components/symbol-header/symbol-header.component.html
@@ -1,5 +1,4 @@
-<nz-space style="padding: 16px">
-  <span *nzSpaceItem>ETHUSD</span>
-  <span *nzSpaceItem>1900.22</span>
-  <span *nzSpaceItem>+5.33%</span>
+<nz-space *ngIf="info$ | async as info" style="padding: 16px">
+  <span *nzSpaceItem>{{ info.symbol }}</span>
+  <span *nzSpaceItem>{{ info.price | currency }}</span>
 </nz-space>
