--- a/web3/src/app/shared/components/order-form/order-form.component.html
+++ b/web3/src/app/shared/components/order-form/order-form.component.html
@@ -29,7 +29,17 @@
   </div>
 
   <nz-button-group *nzSpaceItem>
-    <button nz-button nzType="primary" style="width: 50%">做多</button>
-    <button nz-button nzType="primary" nzDanger style="width: 50%">做空</button>
+    <button nz-button nzType="primary" style="width: 50%" (click)="showModal()">
+      做多
+    </button>
+    <button
+      nz-button
+      nzType="primary"
+      nzDanger
+      style="width: 50%"
+      (click)="showModal()"
+    >
+      做空
+    </button>
   </nz-button-group>
 </nz-space>
