--- a/web3/src/app/shared/components/order-form/order-form.component.html
+++ b/web3/src/app/shared/components/order-form/order-form.component.html
@@ -1,45 +1,53 @@
-<nz-space nzDirection="vertical" style="padding: 16px">
-  <nz-select *nzSpaceItem ngModel="0">
-    <nz-option
-      *ngFor="let option of [{ label: '限價單', value: '0' }]"
-      [nzLabel]="option.label"
-      [nzValue]="option.value"
-    ></nz-option>
-  </nz-select>
+<form nz-form [formGroup]="formGroup" *ngIf="market$ | async">
+  <nz-space nzDirection="vertical" style="padding: 16px">
+    <nz-select *nzSpaceItem formControlName="order_type">
+      <nz-option
+        *ngFor="let option of orderTypes"
+        [nzLabel]="option.label"
+        [nzValue]="option.value"
+      ></nz-option>
+    </nz-select>
 
-  <nz-input-number-group *nzSpaceItem nzAddOnBefore="+" nzAddOnAfter="$">
-    <nz-input-number [ngModel]="100"></nz-input-number>
-  </nz-input-number-group>
+    <nz-input-number-group *nzSpaceItem nzAddOnBefore="+" nzAddOnAfter="$">
+      <nz-input-number formControlName="price"></nz-input-number>
+    </nz-input-number-group>
 
-  <nz-input-number-group *nzSpaceItem nzAddOnAfter="ETH">
-    <nz-input-number [ngModel]="1.45"></nz-input-number>
-  </nz-input-number-group>
+    <nz-input-number-group *nzSpaceItem nzAddOnAfter="ETH">
+      <nz-input-number formControlName="size"></nz-input-number>
+    </nz-input-number-group>
 
-  <nz-input-number-group *nzSpaceItem nzAddOnBefore="止盈" nzAddOnAfter="$">
-    <nz-input-number [ngModel]="100"></nz-input-number>
-  </nz-input-number-group>
+    <nz-input-number-group *nzSpaceItem nzAddOnBefore="止盈" nzAddOnAfter="$">
+      <nz-input-number formControlName="take_profit_price"></nz-input-number>
+    </nz-input-number-group>
 
-  <nz-input-number-group *nzSpaceItem nzAddOnBefore="止損" nzAddOnAfter="$">
-    <nz-input-number [ngModel]="100"></nz-input-number>
-  </nz-input-number-group>
+    <nz-input-number-group *nzSpaceItem nzAddOnBefore="止損" nzAddOnAfter="$">
+      <nz-input-number formControlName="stop_loss_price"></nz-input-number>
+    </nz-input-number-group>
 
-  <div *nzSpaceItem nz-row>
-    <span nz-col nzSpan="12" nz-typography nzType="secondary">總額</span>
-    <span nz-col nzSpan="12" style="text-align: right">1000 USD</span>
-  </div>
+    <div *nzSpaceItem nz-row>
+      <span nz-col nzSpan="12" nz-typography nzType="secondary">總額</span>
+      <span nz-col nzSpan="12" style="text-align: right">
+        {{ totalPrice | currency }} USD
+      </span>
+    </div>
 
-  <nz-button-group *nzSpaceItem>
-    <button nz-button nzType="primary" style="width: 50%" (click)="showModal()">
-      做多
-    </button>
-    <button
-      nz-button
-      nzType="primary"
-      nzDanger
-      style="width: 50%"
-      (click)="showModal()"
-    >
-      做空
-    </button>
-  </nz-button-group>
-</nz-space>
+    <nz-button-group *nzSpaceItem>
+      <button
+        nz-button
+        nzType="default"
+        style="width: 50%"
+        (click)="showModal(Side.sell)"
+      >
+        做空
+      </button>
+      <button
+        nz-button
+        nzType="primary"
+        style="width: 50%"
+        (click)="showModal(Side.buy)"
+      >
+        做多
+      </button>
+    </nz-button-group>
+  </nz-space>
+</form>
