--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -3,11 +3,11 @@
 <nz-divider style="margin: 0"></nz-divider>
 
 <div nz-row>
-  <div nz-col nzSpan="24">
+  <div nz-col nzSpan="14">
     <app-order-form></app-order-form>
   </div>
-  <div nz-col nzSpan="24">
-    <!-- orderbook here -->
+  <div nz-col nzSpan="10">
+    <app-orderbook></app-orderbook>
   </div>
 
   <div nz-col nzSpan="24" *ngIf="countForTabs$ | async as cft">
