--- a/web/src/app/shared/components/order-form/order-form.component.html
+++ b/web/src/app/shared/components/order-form/order-form.component.html
@@ -8,7 +8,7 @@
       ></nz-option>
     </nz-select>
 
-    <nz-input-number-group *nzSpaceItem nzAddOnBefore="+" nzAddOnAfter="$">
+    <nz-input-number-group *nzSpaceItem nzAddOnBefore="價格" nzAddOnAfter="$">
       <nz-input-number formControlName="price"></nz-input-number>
     </nz-input-number-group>
 
