--- a/web/src/app/shared/components/position-list/position-list.component.html
+++ b/web/src/app/shared/components/position-list/position-list.component.html
@@ -1,5 +1,10 @@
 <div *ngIf="orders$ | async as orders">
-  <nz-table #basicTable [nzData]="orders" nzSize="small">
+  <nz-table
+    #basicTable
+    [nzData]="orders"
+    nzSize="small"
+    [nzScroll]="{ x: '768px' }"
+  >
     <thead>
       <tr>
         <th>市場</th>
